dropdowns instead of checkboxes, info about time and steps

--- a/Metro/Metro/Metro.csproj
+++ b/Metro/Metro/Metro.csproj
@@ -98,10 +98,10 @@
     <Resource Include="map.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="skull.png" />
+    <Resource Include="personal.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="personal.png" />
+    <Resource Include="pacman.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
